# V8-DumpAnalyzer

./: .gclient  .gitignore  .gn  BUILD.gn  DEPS  README.md
build_overrides/: build.gni
docs/superpowers/plans/: 2026-06-25-dump-analyzer.md
docs/superpowers/specs/: 2026-06-25-dump-analyzer-design.md
scripts/: build.bat
src/: BUILD.gn  analyzer.cc  analyzer.h  heap-scanner.cc  heap-scanner.h  main.cc  main.cpp  minidump-reader.cc  minidump-reader.h  minidump_reader.cpp  minidump_reader.h  output-formatter.cc  output-formatter.h  symbol_resolver.cpp  symbol_resolver.h  types.h  v8_scan.cpp  v8_scan.h
